crates/xlate/tests/snapshots/golden_matrix__reason_summary_detailed__o4-mini__20260910__responses_to_chat__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "messages": [
    {
      "role": "user",
      "content": "Explain why the sky is blue, step by step."
    }
  ],
  "reasoning_effort": "high",
  "max_completion_tokens": 256
}
--- headers ---
upstream_streams: false
--- degraded ---
