crates/xlate/tests/snapshots/golden_matrix__reason_summary_detailed__o4-mini__20260910__responses_to_chat__openai_compatible.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "llama-x",
  "messages": [
    {
      "role": "user",
      "content": "Explain why the sky is blue, step by step."
    }
  ],
  "max_tokens": 256
}
--- headers ---
upstream_streams: false
--- degraded ---
reasoning=dropped
